# goo-gol-conway

./: .gitignore  Cargo.toml  README.md
gol-client/: Cargo.toml
gol-client/examples/: and_gate_00.json  and_gate_01.json  and_gate_10.json  and_gate_11.json  and_gate_4_neighbors.json  bombers.json  bombers_255.json  brians_brain.json  byte_state.json  glider.json  glider_eater.json  glider_gun.json  glider_gun_with_eater.json  random.json  random_gol.json  sedimental.json  star_wars.json  star_wars_donut.json  tetris.json  tetris_ascii.json
gol-client/src/: lib.rs  main.rs
gol-client/src/callback/: delay.rs  mod.rs  pause.rs  terminate.rs
gol-client/src/demo/: glider_gun_2d.rs  mod.rs  two_dimensional.rs  util.rs
gol-client/src/persistence/: adjacent_index_prediction.rs  batch_deserializer_local.rs  batch_serializer.rs  batch_serializer_local.rs  indexed_buffer.rs  load_board.rs  mod.rs  pre_load_buffer.rs  preload_buffer.rs  preload_cache.rs  preload_prediction.rs  save_generation.rs
gol-client/src/replay/: mod.rs  replayer_local.rs
gol-client/src/util/: keyboard_control.rs  mod.rs
gol-core/: Cargo.toml
gol-core/benches/: neighbor.rs  neighbor_benchmark.rs
gol-core/src/: lib.rs
gol-core/src/board/: board.rs  board_callback.rs  board_neighbor.rs  board_space.rs  board_state.rs  board_strategy.rs  mod.rs  standard.rs
gol-core/src/board_states/: hashmap_storage.rs  mod.rs  predefined.rs  sparse.rs  sparse_binary.rs
gol-core/src/callback/: delay.rs  keyboard_control.rs  mod.rs  model_binary_states.rs  model_states.rs  pause.rs  terminate.rs
gol-core/src/cell/: cell.rs  common.rs  index.rs  mod.rs  state.rs  strategy.rs
gol-core/src/evolution/: mod.rs  strategy.rs  strategy_binary.rs  strategy_conway.rs  strategy_discrete.rs  strategy_grid_dynamic.rs  strategy_life_like.rs  strategy_manager.rs  strategy_neighbor_count.rs
gol-core/src/neighbors/: grid_donut.rs  grid_surround.rs  mod.rs  moore.rs  moore_donut.rs  moore_triangle.rs  util.rs
gol-core/src/persistence/: load_board.rs  mod.rs
gol-core/src/space/: grid.rs
gol-core/src/util/: grid_util.rs  mod.rs  sync_util.rs
gol-renderer/: Cargo.toml
gol-renderer/src/: lib.rs
gol-renderer/src/graphics/: grid_2d.rs
gol-renderer/src/graphics/shaders/: square.vert  triangle.frag  triangle.vert
gol-renderer/src/renderer/: board_info.rs  fps_counter.rs  keyboard_control.rs  mod.rs  renderer.rs
gol-renderer/src/state_visual/: conway.rs  discrete.rs  mapping.rs  mod.rs
gol-renderer/src/text/: grid_2d.rs  grid_2d_shadow.rs  mod.rs
gol-renderer/src/util/: grid_util.rs  mod.rs
gol-simple/: Cargo.toml
