[package]
name = "gol-client"
version = "0.1.0"
authors = ["Shuyang Sun <shuyangsun10@gmail.com>"]
edition = "2018"
description = "Conway's Game of Life supercharged."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
# gol-core = "0.4.0"
gol-core = { path = "../gol-core" }
# gol-renderer = "0.3.0"
gol-renderer = { path = "../gol-renderer" }

#[[bench]]
#name = "gol_client_benchmark"
#harness = false

[lib]
bench = false

[[bin]]
name = "gol_client"
path = "src/main.rs"
bench = false
