[package]
name = "gol-client"
version = "0.1.0"
authors = ["Shuyang Sun <shuyangsun10@gmail.com>"]
edition = "2018"
description = "Conway's Game of Life supercharged."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ascii = ["ncurses", "gol-renderer/ascii"]
vulkan = ["gol-renderer/vulkan"]
metal = ["gol-renderer/metal"]
dx12 = ["gol-renderer/dx12"]
dx11 = ["gol-renderer/dx11"]
gl = ["gol-renderer/gl"]

[dependencies]
rand = "0.8.2"
rayon = "1.5.0"
clap = "2.33.3"
ncurses = { version = "5.100.0", optional = true }
# gol-core = "0.4.0"
gol-core = { path = "../gol-core" }
# gol-renderer = "0.3.0"
gol-renderer = { path = "../gol-renderer", default-features = false }

#[[bench]]
#name = "gol_client_benchmark"
#harness = false

[lib]
bench = false

[[bin]]
name = "gol"
path = "src/main.rs"
bench = false
