[package]
name = "gol-core"
version = "0.4.0"
authors = ["Shuyang Sun <shuyangsun10@gmail.com>"]
edition = "2018"
description = "Conway's Game of Life supercharged, this crate is the client part that is managing the board."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
itertools = "0.10.0"
rayon = "1.5.0"
crossbeam-channel = "0.5.0"
ncurses = "5.100.0"

#[[bench]]
#name = "gol_core_benchmark"
#harness = false

[lib]
bench = false
