[package]
name = "gol-core"
version = "0.4.0"
authors = ["Shuyang Sun <shuyangsun10@gmail.com>"]
edition = "2018"
description = "Conway's Game of Life supercharged, this crate is the client part that is managing the board."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
itertools = "0.10.0"
rayon = "1.5.0"
criterion = "0.3.3"
tokio = { version = "1.0.2", features = ["sync"] }

[[bench]]
name = "neighbor_benchmark"
harness = false

[lib]
bench = false
