[package]
name = "gol-renderer"
version = "0.4.0"
authors = ["Shuyang Sun <shuyangsun10@gmail.com>"]
edition = "2018"
description = "Renderer for gol-client."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ascii = ["ncurses"]

[dependencies]
rayon = "1.5.0"
num-traits = "0.2"
ncurses = { version = "5.100.0", optional = true }
gfx-hal = { version = "0.6.0", optional = true}
# gol-core = "0.4.0"
gol-core = { path = "../gol-core" }
