[package]
name = "gol-renderer"
version = "0.4.0"
authors = ["Shuyang Sun <shuyangsun10@gmail.com>"]
edition = "2018"
description = "Renderer for gol-client."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ascii = ["ncurses"]
vulkan = ["gfx-hal", "gfx-backend-vulkan"]
metal = ["gfx-hal", "gfx-backend-metal"]
dx11 = ["gfx-hal", "gfx-backend-dx11"]
dx12 = ["gfx-hal", "gfx-backend-dx12"]
gl = ["gfx-hal", "gfx-backend-gl"]

[dependencies]
rayon = "1.5.0"
crossbeam-channel = "0.5.0"
num-traits = "0.2"
ncurses = { version = "5.100.0", optional = true }
gfx-hal = { version = "0.6.0", optional = true}
gfx-backend-vulkan = { version = "0.6.5", optional = true}
gfx-backend-metal = { version = "0.6.5", optional = true}
gfx-backend-dx11 = { version = "0.6.17", optional = true}
gfx-backend-dx12 = { version = "0.6.13", optional = true}
gfx-backend-gl = { version = "0.6.1", optional = true}
# gol-core = "0.4.0"
gol-core = { path = "../gol-core" }
