[package]
name = "gol-renderer"
version = "1.0.0"
authors = ["Shuyang Sun <shuyangsun10@gmail.com>"]
edition = "2018"
description = "Renderer for gol-client."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ascii = ["ncurses"]

[dependencies]
rayon = "1.5.0"
rgb = "0.8.27"
tokio = { version = "1.4.0", features = ["sync"] }
num-traits = "0.2.14"
gfx-hal = "0.7.0"
shaderc = "0.7.2"
winit = "0.24.0"
gol-core = "1.0.0"
# gol-core = { path = "../gol-core" }
ncurses = { version = "5.101.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies.backend]
package = "gfx-backend-metal"
version = "=0.7.0"

[target.'cfg(windows)'.dependencies.backend]
package = "gfx-backend-dx12"
version = "=0.7.0"

[target.'cfg(all(unix, not(target_os = "macos"), not(target_os = "$ARCH-pc-windows-gnu")))'.dependencies.backend]
package = "gfx-backend-vulkan"
version = "=0.7.0"

